--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/arrays.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/arrays.xml
@@ -1,2 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string-array name="audioDriverValues">
+        <item>"0"</item>
+        <item>"1"</item>
+        <item>"2"</item>
+    </string-array>
+    <string-array name="audioDriverEntries">
+        <item>Automatic (app chooses optimal driver)</item>
+        <item>AAudio (lower latency on Oreo or later)</item>
+        <item>OpenSL ES (input and output)</item>
+    </string-array>
+</resources>
