--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/xml/settings.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/xml/settings.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/settingsActivityTitle" android:key="@string/settings">
+    <ListPreference
+        android:title="Audio driver"
+        android:key="audioDriver"
+        android:defaultValue="1"
+        android:entries="@array/audioDriverEntries"
+        android:entryValues="@array/audioDriverValues" />
     <EditTextPreference android:enabled="true" android:key="OPCODE6DIR" android:title="Plugins directory"/>
     <EditTextPreference android:key="SFDIR" android:title="Output directory" android:enabled="true"/>
     <EditTextPreference android:key="SSDIR" android:title="Samples directory" android:enabled="true"/>
