Increased sliders/added messages in Widgets tab for Csound app.

--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/layout/main.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/layout/main.xml
@@ -64,6 +64,7 @@
         android:id="@+id/html_tab"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <TableLayout
         android:id="@+id/widgets_tab"
         android:layout_width="match_parent"
@@ -72,119 +73,180 @@
             android:layout_width="match_parent"
             android:scrollbars="none"
             android:layout_height="0px"
-            android:layout_weight="9">
+            android:layout_weight="8">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:isScrollContainer="true"
                 android:orientation="vertical" >
-
-            <SeekBar
-                android:id="@+id/seekBar1"
-                style="@style/csoundSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/slider1" />
-            <TextView
-                style="@style/csoundSeekBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/slider1"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-            <SeekBar
-                android:id="@+id/seekBar2"
-                style="@style/csoundSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                style="@style/csoundSeekBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/slider2"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-            <SeekBar
-                android:id="@+id/seekBar3"
-                style="@style/csoundSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                style="@style/csoundSeekBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/slider3"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-            <SeekBar
-                android:id="@+id/seekBar4"
-                style="@style/csoundSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                style="@style/csoundSeekBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/slider4"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-            <SeekBar
-                android:id="@+id/seekBar5"
-                style="@style/csoundSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                style="@style/csoundSeekBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/slider5"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-            <SeekBar
-                android:id="@+id/seekBar6"
-                style="@style/csoundSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                style="@style/csoundSeekBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="slider6"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-            <SeekBar
-                android:id="@+id/seekBar7"
-                style="@style/csoundSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                style="@style/csoundSeekBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="slider7"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-            <SeekBar
-                android:id="@+id/seekBar8"
-                style="@style/csoundSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                style="@style/csoundSeekBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="slider8"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-            <SeekBar
-                android:id="@+id/seekBar9"
-                style="@style/csoundSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                style="@style/csoundSeekBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="slider9"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                <LinearLayout
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+                    <TextView
+                        style="@style/csoundSeekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/slider1"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <SeekBar
+                        android:id="@+id/seekBar1"
+                        style="@style/csoundSeekBar"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/slider1" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+                    <TextView
+                        style="@style/csoundSeekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/slider2"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <SeekBar
+                        android:id="@+id/seekBar2"
+                        style="@style/csoundSeekBar"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/slider2" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+                    <TextView
+                        style="@style/csoundSeekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/slider3"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <SeekBar
+                        android:id="@+id/seekBar3"
+                        style="@style/csoundSeekBar"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/slider3" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+                    <TextView
+                        style="@style/csoundSeekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/slider4"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <SeekBar
+                        android:id="@+id/seekBar4"
+                        style="@style/csoundSeekBar"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/slider4" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+                    <TextView
+                        style="@style/csoundSeekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/slider5"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <SeekBar
+                        android:id="@+id/seekBar5"
+                        style="@style/csoundSeekBar"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/slider5" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+                    <TextView
+                        style="@style/csoundSeekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/slider6"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <SeekBar
+                        android:id="@+id/seekBar6"
+                        style="@style/csoundSeekBar"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/slider6" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+                    <TextView
+                        style="@style/csoundSeekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/slider7"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <SeekBar
+                        android:id="@+id/seekBar7"
+                        style="@style/csoundSeekBar"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/slider7" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+                    <TextView
+                        style="@style/csoundSeekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/slider8"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <SeekBar
+                        android:id="@+id/seekBar8"
+                        style="@style/csoundSeekBar"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/slider8" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+                    <TextView
+                        style="@style/csoundSeekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/slider9"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                    <SeekBar
+                        android:id="@+id/seekBar9"
+                        style="@style/csoundSeekBar"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/slider9" />
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
         <TableRow
             android:layout_width="match_parent"
-            android:layout_weight=".5"
+            android:layout_weight=".25"
             android:layout_height="0px">
             <Button
                 android:id="@+id/button1"
@@ -192,7 +254,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:minHeight="36dp"
                 android:text="@string/butt1"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
             <Button
@@ -201,7 +262,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:minHeight="36dp"
                 android:text="@string/butt2"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
             <Button
@@ -210,7 +270,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:minHeight="36dp"
                 android:text="@string/butt3"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
             <Button
@@ -219,7 +278,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:minHeight="36dp"
                 android:text="@string/butt4"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
             <Button
@@ -228,7 +286,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:minHeight="36dp"
                 android:text="@string/butt5"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
@@ -236,16 +293,30 @@
             android:id="@+id/pad"
             style="@style/csoundButtonStyle"
             android:layout_width="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:layout_height="0px"
             android:text="@string/trackpad" />
+        <ScrollView
+            android:id="@+id/messageTextSmallScroll"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="2" >
+            <TextView
+                android:id="@+id/messageTextViewSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:padding="5dp"
+                android:textColor="#00ff00"
+                android:textSize="10sp"
+                android:typeface="monospace" />
+        </ScrollView>
     </TableLayout>
 
     <ScrollView
         android:id="@+id/messages_tab"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-
         <TextView
             android:id="@+id/messageTextView"
             android:layout_width="wrap_content"
