--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/menu/menu.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/menu/menu.xml
@@ -62,6 +62,12 @@
                 android:title="Scrims, Michael Gogins"
                 android:titleCondensed="Scrims"
                 android:visible="true" />
+            <item
+                android:id="@+id/itemOblivion"
+                android:enabled="true"
+                android:title="Oblivion, Astor Piazzola"
+                android:titleCondensed="Oblivion"
+                android:visible="true" />
         </menu>
     </item>
     <item android:id="@+id/itemGuide" android:visible="true" android:title="@string/guide" android:enabled="true" android:menuCategory="container" android:orderInCategory="1"></item>
