--- a/playpen/playpen.glade
+++ b/playpen/playpen.glade
@@ -45,10 +45,23 @@
               </packing>
             </child>
             <child>
+              <object class="GtkToolButton" id="open_button">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="tooltip_text" translatable="yes">Open a file</property>
+                <property name="label" translatable="yes">Open,,,</property>
+                <property name="use_underline">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkToolButton" id="save_as_button">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="tooltip_text" translatable="yes">Save as...</property>
+                <property name="tooltip_text" translatable="yes">Save the file under a new name</property>
                 <property name="label" translatable="yes">Save as...</property>
                 <property name="use_underline">True</property>
               </object>
